# Philote-Python

./: .buildinfo  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  genindex.html  installation.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: documentation.yaml  publish-pypi.yaml  tests.yaml
_sources/: installation.md  intro.md
_sources/api/: explicit.md
_sources/tutorials/: csdl.md
api/: explicit.html
doc/: _config.yml  _toc.yml  api.md  installation.md  intro.md
doc/tutorials/: csdl.md  explicit_disciplines.md  implicit_disciplines.md  openmdao.md  quickstart.md  units.md
examples/: client.py  openmdao_parabaloid.py  openmdao_quadratic.py  parabaloid_client.py  parabaloid_explicit.py  quadratic_client.py  quadratic_implicit.py
philote-mdo/general/: explicit_client.py  explicit_server.py  implicit_client.py
philote-mdo/utils/: array_pb2.py  array_pb2.pyi  data_pb2.py  data_pb2.pyi  explicit_pb2.py  explicit_pb2.pyi  explicit_pb2_grpc.py
philote_mdo/: __init__.py
philote_mdo/csdl/: __init__.py  explicit.py  implicit.py  utils.py
philote_mdo/examples/: __init__.py  paraboloid.py  quadratic.py  rosenbrock.py  sellar.py
philote_mdo/general/: __init__.py  client_base.py  discipline.py  discipline_client.py  discipline_server.py  explicit_client.py  explicit_discipline.py  explicit_server.py  implicit_client.py  implicit_discipline.py  implicit_server.py  run_server.py  (+1 more)
test/: chunking.py  run_tests.py  test_discipline.py  test_discipline_client.py  test_discipline_server.py  test_explicit_client.py  test_explicit_server.py  test_implicit_client.py  test_implicit_server.py  test_integration.py  test_openmdao_clients.py  test_openmdao_group.py  test_openmdao_integration.py  test_openmdao_utils.py  test_paraboloid.py  test_quadratic.py  test_rosenbrock.py  test_utils.py
tests/: __init__.py  client.py  server.py  test_csdl_explicit_client.py  test_discipline_client.py  test_discipline_server.py  test_explicit_server.py  test_implicit_client.py  test_utils.py
tutorials/: csdl.html  explicit_disciplines.html  implicit_disciplines.html  openmdao.html  quickstart.html  units.html
utils/: compile_proto.py
(+30 files in other folders)
