[tool.poetry]
name = "project"
version = "0.1.0"
description = "Python library implementing the Philote MDO standard."
authors = ["Christopher Lupp <christopherlupp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.51.3"
grpcio-tools = "^1.51.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
