[tool.poetry]
name = "philote-mdo"
version = "0.5.1"
description = "Python bindings that implement the Philote-MDO standard."
license = "Apache-2.0"
authors = ["Christopher Lupp"]
readme = "README.md"
homepage = "https://chrislupp.github.io/Philote-Python/"
repository = "https://github.com/chrislupp/Philote-Python"
documentation = "https://chrislupp.github.io/Philote-Python/"
keywords = ["mdo", "optimization", "rpc"]
include = ["philote_mdo/generated/*pb2.py", "philote_mdo/generated/*pb2.pyi", "philote_mdo/generated/*grpc.py", "proto/*"]


[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.62.0"
numpy = "^1.26.4"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core", "grpcio-tools", "protoletariat"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.build]
generate-setup-file = false
script = "utils/compile_proto.py"